# patina-research

./: .envrc  .envrc.local.example  .gitignore  Cargo.toml  README.md  flower-prop.md  rust-toolchain.toml
agents/: README.md  chain.py
agents/common/: .envrc  .envrc.local.example  .gitignore  README.md  TODO.md  _bootstrap.py  agent.py  build_all.sh  build_for.sh  cli.py  pyrightconfig.json  recoveries.py  stage.py  trace_util.py  turn_budget.py
agents/common/data/: exchange_handlers.json  exchange_layout.json  exchange_recovered.rs  priors.json  priors_meta.json
agents/common/scripts/: archive_run.py  bndb_propagation.py  eval_index.py  ir_view.py  warp_smoke.py  whitebox_eval.py
agents/common/tests/: run.sh  test_binja_tools.py
agents/common/tools/: __init__.py  binja.py  build_priors.py  ctx.py  priors.py
agents/flower/: asm_dump.py  check_tool.py  consistency.py  flower.py  pipeline.py  submit.py
agents/flower/tests/: test_consistency.py
agents/marinator/: marinator.py  pipeline.py  submit.py  write.py
agents/samples/runs/baby-rust/2026-05-09T1758/: EVAL.md  sidecar.json
agents/samples/runs/baby-rust/viz/: index.html  index.md
agents/samples/runs/braintrust-stripped/2026-05-10T1534-4088b0-v3-preflight/: EVAL.md  sidecar.json
agents/samples/runs/braintrust-stripped/viz/: index.html  index.md
agents/samples/runs/hl-node2/2026-05-10T1616-typ-v2-flowerredo/: sidecar.json
agents/samples/runs/hl-node2/2026-05-10T1625-typ-v3-preflight/: EVAL.md  sidecar.json
agents/samples/runs/hl-node2/2026-05-10T1801-typ-v4-leniency-fail/: EVAL.md  sidecar.json
agents/samples/runs/hl-node2/2026-05-10T2206-typ-v6-loose-real-bodies/: EVAL.md  sidecar.json
agents/samples/runs/hl-node2/2026-05-10T2341-typ-v10b-skeleton-ctx/: EVAL.md  sidecar.json
agents/signer/: asm_dump.py  check_tool.py  decomp_gate.py  exo_tool.py  pipeline.py  sigcheck.py  sigcheck.pyi  sigcheck.sh  signer.py  sos.out  submit.py
agents/signer/tests/: bench_dance.py  run.py  run.sh
agents/signer/tests/fixtures/: sigshapes.rs
agents/warper/: pipeline.py
bench/benchmark/: build.sh  rustc.version
bench/benchmark/2026-customeval/: Cargo.toml  source.rs
bench/benchmark_183/: build.sh
bench/benchmark_183/2020-baby-rust/: binary
bench/benchmark_183/2020-habidasher/: binary
bench/benchmark_183/2020-s2ring/: binary
bench/benchmark_183/2020-toobz/: binary
bench/benchmark_183/2021-baby-rust/: binary
bench/benchmark_183/2021-braintrust/: binary  binary.patina.json  binary.symtypes
bench/benchmark_183/2021-endeavour/: binary
bench/benchmark_183/2021-parasite/: binary
bench/benchmark_stripped/2020-baby-rust/: binary
bench/benchmark_stripped/2020-habidasher/: binary
bench/benchmark_stripped/2020-s2ring/: binary
bench/benchmark_stripped/2020-toobz/: binary
bench/benchmark_stripped/2020-toobz/sos/: .envrc  Cargo.toml
bench/benchmark_stripped/2021-baby-rust/: binary
bench/benchmark_stripped/2021-braintrust/: binary
bench/benchmark_stripped/2021-endeavour/: binary
bench/benchmark_stripped/2021-parasite/: binary
bench/benchmark_stripped/2021-parasite/binary_angr_rtdb/: lock.mdb
bench/benchmark_stripped_183/2020-baby-rust/: binary
bench/benchmark_stripped_183/2020-habidasher/: binary
bench/benchmark_stripped_183/2020-s2ring/: binary
bench/benchmark_stripped_183/2020-toobz/: binary
bench/benchmark_stripped_183/2021-baby-rust/: binary
bench/benchmark_stripped_183/2021-braintrust/: binary
bench/benchmark_stripped_183/2021-endeavour/: binary
bench/benchmark_stripped_183/2021-parasite/: binary
samples/: README.md  analyze_and_query.py  find_vecs.py  flow_dump.py  inspect_function.py  layout_probe.py
samples/runs/braintrust-stripped/2026-05-09T1830-braintrust/: EVAL.md  whitebox_score.json
samples/runs/hl-node2/2026-05-09T0550/: EVAL.md
samples/runs/hl-node2/2026-05-09T1730/: EVAL.md
scripts/: bench.sh
tools/anemone/: Cargo.toml  README.md  anemone.pyi  build.rs  pyproject.toml
tools/anemone/py/: sanity.py  simple.py
tools/anemone/src/: flow.rs  lib.rs  lower.rs  main.rs
tools/anemone/tests/: basic.rs
tools/carpace/: Cargo.toml  carpace.pyi  pyproject.toml
tools/carpace/src/: lib.rs
tools/lymph/: Cargo.toml  build.rs  lymph.pyi  pyproject.toml
tools/lymph/py/: braintrust.py  test.py  test_cross_fn.py  test_phase25_boundary.py  test_ref_alias.py
tools/lymph/py/braintrust-mock/: Cargo.toml
tools/lymph/py/braintrust-mock/src/: main.rs
tools/lymph/py/mock-crate/: Cargo.toml
tools/lymph/py/mock-crate/src/: main.rs
tools/lymph/src/: driver.rs  flow.rs  lib.rs  lower.rs  main.rs
tools/lymph/tests/: basic.rs  decompetition.rs
tools/nacre/: Cargo.toml  build.rs  example.py  example.rs  nacre.pyi  pyproject.toml
tools/nacre/py/: test.py
tools/nacre/src/: emit_c.rs  lib.rs  main.rs
tools/nacre/test/: braintrust.rs  example.rs  lookupmap.c  real.rs  run.sh  s2ring.c  s2ring.rs  test_sigs.py  toobz.c  toobz.rs
(+77 files in other folders)
