[project]
name = "nacre"
version = "0.1.0"
description = "Query exact Rust struct memory layouts using the real compiler"
requires-python = ">=3.10"
dependencies = [
    "maturin>=1.12.6",
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "nacre"
# Stay dynamically linked — bundling librustc_driver into the wheel would
# create duplicate global state and conflict with the running rustc toolchain.
skip-auditwheel = true
